feat: replace RuntimeExceptions with ResponseStatusExceptions for better error handling in PostService